# disclude-py

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  version.py  version.yml
src/: lib.rs
test/: test_cli.py
